--- a/package.json
+++ b/package.json
@@ -16,31 +16,67 @@
 		"postinstall": "prisma generate",
 		"preview": "next build && next start",
 		"start": "next start",
-		"typecheck": "tsc --noEmit"
+		"typecheck": "tsc --noEmit",
+		"play": "ts-node src/playground.ts"
 	},
 	"dependencies": {
+		"@ai-sdk/google": "^1.2.22",
 		"@clerk/nextjs": "^6.23.2",
+		"@google/genai": "^1.8.0",
+		"@orama/orama": "^3.1.10",
+		"@orama/plugin-data-persistence": "^3.1.10",
 		"@prisma/client": "^6.5.0",
+		"@radix-ui/react-avatar": "^1.1.10",
+		"@radix-ui/react-dropdown-menu": "^2.1.15",
+		"@radix-ui/react-select": "^2.2.5",
+		"@radix-ui/react-separator": "^1.1.7",
 		"@radix-ui/react-slot": "^1.2.3",
+		"@radix-ui/react-tabs": "^1.1.12",
+		"@radix-ui/react-tooltip": "^1.2.7",
 		"@t3-oss/env-nextjs": "^0.12.0",
 		"@tanstack/react-query": "^5.69.0",
+		"@tiptap/extension-text": "^2.24.2",
+		"@tiptap/react": "^2.24.2",
+		"@tiptap/starter-kit": "^2.24.2",
 		"@trpc/client": "^11.0.0",
 		"@trpc/react-query": "^11.0.0",
 		"@trpc/server": "^11.0.0",
+		"@types/dompurify": "^3.0.5",
+		"@types/turndown": "^5.0.5",
+		"@vercel/functions": "^2.2.2",
+		"ai": "^4.3.16",
+		"axios": "^1.10.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"date-fns": "^4.1.0",
+		"dompurify": "^3.2.6",
+		"framer-motion": "^12.23.0",
+		"jotai": "^2.12.5",
+		"kbar": "^0.1.0-beta.45",
 		"lucide-react": "^0.525.0",
 		"next": "^15.2.3",
+		"next-themes": "^0.4.6",
+		"p-limit": "^6.2.0",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
+		"react-letter": "^0.4.0",
+		"react-resizable-panels": "^3.0.3",
+		"react-select": "^5.10.1",
 		"server-only": "^0.0.1",
+		"sonner": "^2.0.6",
+		"stripe": "^18.3.0",
 		"superjson": "^2.2.1",
 		"tailwind-merge": "^3.3.1",
+		"ts-node": "^10.9.2",
+		"turndown": "^7.2.0",
+		"usehooks-ts": "^3.1.1",
+		"vaul": "^1.1.2",
 		"zod": "^3.24.2"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
 		"@tailwindcss/postcss": "^4.0.15",
+		"@tailwindcss/typography": "^0.5.16",
 		"@types/node": "^20.14.10",
 		"@types/react": "^19.0.0",
 		"@types/react-dom": "^19.0.0",
