--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
 		"@tiptap/extension-text": "^2.24.2",
 		"@tiptap/react": "^2.24.2",
 		"@tiptap/starter-kit": "^2.24.2",
-		"@trpc/client": "^11.0.0",
+		"@trpc/client": "^11.4.3",
 		"@trpc/react-query": "^11.0.0",
 		"@trpc/server": "^11.0.0",
 		"@types/dompurify": "^3.0.5",
@@ -53,6 +53,7 @@
 		"framer-motion": "^12.23.0",
 		"jotai": "^2.12.5",
 		"kbar": "^0.1.0-beta.46",
+		"lodash": "^4.17.21",
 		"lucide-react": "^0.525.0",
 		"next": "^15.2.3",
 		"next-themes": "^0.4.6",
@@ -71,12 +72,14 @@
 		"turndown": "^7.2.0",
 		"usehooks-ts": "^3.1.1",
 		"vaul": "^1.1.2",
+		"ws": "^8.18.3",
 		"zod": "^3.24.2"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
 		"@tailwindcss/postcss": "^4.0.15",
 		"@tailwindcss/typography": "^0.5.16",
+		"@types/lodash": "^4.17.20",
 		"@types/node": "^20.14.10",
 		"@types/react": "^19.0.0",
 		"@types/react-dom": "^19.0.0",
