--- a/package.json
+++ b/package.json
@@ -55,12 +55,14 @@
 		"kbar": "^0.1.0-beta.46",
 		"lodash": "^4.17.21",
 		"lucide-react": "^0.525.0",
+		"mammoth": "^1.10.0",
 		"next": "^15.2.3",
 		"next-themes": "^0.4.6",
 		"p-limit": "^6.2.0",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-letter": "^0.4.0",
+		"react-pdf": "^10.0.1",
 		"react-resizable-panels": "^3.0.3",
 		"react-select": "^5.10.1",
 		"server-only": "^0.0.1",
